# tauri-plugin-biometry

./: Cargo.toml  package.json  pnpm-lock.yaml
.github/workflows/: checks.yml  publish.yml
src/: windows.rs
