[package]
name = "tauri-plugin-biometry"
version = "0.2.6"
authors = ["You"]
description = "A Tauri v2 plugin for biometric authentication (Touch ID, Face ID, fingerprint) on Android, macOS, iOS and Windows."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-biometry"
license = "MIT"
repository = "https://github.com/Choochmeque/tauri-plugin-biometry"

[dependencies]
tauri = { version = "2.8.2" }
serde = "1.0"
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-foundation = "0.3"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-local-authentication = { version = "0.3", features = [
    "LAContext",
    "LAError",
    "block2",
] }
objc2-security = "0.3"
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Foundation",
    "Storage_Streams",
    "Security_Credentials_UI",
    "Security_Cryptography_Core",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
